home page implementation

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Welcome!{% endblock %}</title>
+    <meta name="viewport" content="width=device-width, initial">
     <link rel="icon"
           href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
     <script src="https://kit.fontawesome.com/6e99e97248.js" crossorigin="anonymous"></script>
@@ -15,7 +16,7 @@
         {{ encore_entry_script_tags('app') }}
     {% endblock %}
 </head>
-    <body class="container mx-auto w-screen">
+    <body class="w-full h-full ">
         <div {{ react_component('Navbar') }}></div>
             {% block body %}{% endblock %}
         <div {{ react_component('Footer') }}></div>
