--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,12 +2,12 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Welcome!{% endblock %}</title>
+    <title>{% block title %}Conseils/Services!{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial">
     <link rel="icon"
-          href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
     <script src="https://kit.fontawesome.com/6e99e97248.js" crossorigin="anonymous"></script>
-    {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+    
     {% block stylesheets %}
         {{ encore_entry_link_tags('app') }}
     {% endblock %}
